--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
       "rewrites": [
         {
           "source": "**",
-          "public": "./public/",
+          "public": "./public",
           "destination": "./public/index.html"
         }
       ]
